# ntcad

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  genindex.html  gmon.out  index.html  justfile  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: index.doctree
.doctrees/api/: calculators.doctree  cp2k.doctree  index.doctree  kpoints.doctree  omen.doctree  structures.doctree  utils.doctree  vasp.doctree  wannier90.doctree  winterface.doctree
.github/workflows/: doc.yml  docs.yml
_sources/api/: cp2k.rst.txt  index.rst.txt  kpoints.rst.txt  structures.rst.txt  utils.rst.txt  vasp.rst.txt  wannier90.rst.txt  winterface.rst.txt
api/: calculators.html  cp2k.html  index.html  kpoints.html  omen.html  structures.html  utils.html  vasp.html  wannier90.html  winterface.html
doc/: Makefile
doc/source/: conf.py  index.rst
doc/source/_static/: ntcad.css
doc/source/api/: calculators.rst  index.rst  kpoints.rst  omen.rst  utils.rst  vasp.rst  wannier90.rst
docs/src/: conf.py  index.rst  modules.rst  ntcad.calculators.rst  ntcad.core.rst  ntcad.io.rst  ntcad.parsers.rst  ntcad.rst  ntcad.transforms.rst  ntcad.utils.rst  ntcad.visualization.rst
src/ntcad/: __init__.py  _version.py  calculator.py  io.py  kpoints.py  structure.py  utils.py
src/ntcad/calculators/: __init__.py  calculator.py  omen.py  vasp.py  wannier90.py  winterface.py
src/ntcad/core/: __init__.py  calculator.py  io.py  kpoints.py  structure.py
src/ntcad/cp2k/: __init__.py  io.py  plot.py  routines.py
src/ntcad/io/: main.py  (+5 more)
(+38 files in other folders)
