[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[project]
name = "ntcad"
authors = [{ name = "Nicolas Vetsch", email = "vetschn@iis.ee.ethz.ch" }]
description = "Useful Nano-TCAD tools."
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
keywords=["Nano-TCAD", "VASP", "OMEN", "Wannier90"]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "ase>=3.22.1",
    "matplotlib>=3.5.1",
    "numpy>=1.23.2",
    "pyvista >= 0.37.0",
    "scipy>=1.9.0",
    "tqdm>=4.64.0",
    "vtk>=9.1.0",
    "xmltodict>=0.12.0",
]

[project.urls]
repository = "https://github.com/vetschn/ntcad"

[tool.setuptools.dynamic]
version = { attr = "ntcad.__about__.__version__" }
